--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+indexmap = { version = "2.9.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
