--- a/glutton.toml
+++ b/glutton.toml
@@ -1,28 +1,30 @@
-# [tasks.build-client]
-# shell = ["pnpm i", "pnpm client-web:build"]
+[tasks.build.client.install]
+cmd = ["pnpm", "install"]
 
-# [tasks.build-linux]
-# deps = ["build-client"]
-# shell = ["cargo build --release --target x86_64-unknown-linux-gnu"]
+[tasks.build.client.build]
+cmd = ["pnpm", "client-web:build"]
 
-# [tasks.build-windows]
-# deps = ["build-client"]
-# shell = ["cargo build --release --target x86_64-pc-windows-gnu"]
+[tasks.build.linux]
+cmd = ["cargo", "build", "--release", "--target", "x86_64-unknown-linux-gnu"]
 
-# [tasks.build]
-# deps = ["build-linux", "build-windows"]
+[tasks.build.windows]
+cmd = ["cargo", "build", "--release", "--target", "x86_64-pc-windows-gnu"]
 
-[tasks.clean]
-shell = ["cargo clean"]
+# [tasks.clean]
+# cmd = ["cargo clean"]
 
-[tasks.dev.build]
-deps = ["clean"]
-shell = ["cargo build"]
+# [tasks.dev.setup]
+# deps = ["clean"]
+# cmd = ["cargo build"]
 
-[tasks.prod.build]
-deps = ["clean"]
-shell = ["cargo build --release"]
+# [tasks.dev.build]
+# deps = ["clean"]
+# cmd = ["cargo build"]
 
-[tasks.install]
-deps = ["dev.build", "prod.build"]
-shell = ["cargo install --path ."]
+# [tasks.prod.build]
+# deps = ["clean"]
+# cmd = ["cargo build --release"]
+
+# [tasks.install]
+# deps = ["dev.build", "prod.build"]
+# cmd = ["cargo install --path ."]
