more dependency testing

--- a/glutton.toml
+++ b/glutton.toml
@@ -1,40 +1,46 @@
-[tasks.build.client.install]
+[tasks.client.build.install]
 cmd = ["pnpm", "install"]
-
-[tasks.build.client.build]
+[tasks.client.build.build]
 cmd = ["pnpm", "client-web:build"]
 
+[tasks.prod.build]
+deps = ["client.build"]
 [tasks.prod.build.linux]
 cmd = ["cargo", "build", "--release", "--target", "x86_64-unknown-linux-gnu"]
-
 [tasks.prod.build.windows]
 cmd = ["cargo", "build", "--release", "--target", "x86_64-pc-windows-gnu"]
 
+[tasks.dev.build]
+deps = ["client.build"]
 [tasks.dev.build.linux]
 cmd = ["cargo", "build", "--target", "x86_64-unknown-linux-gnu"]
-
 [tasks.dev.build.windows]
 cmd = ["cargo", "build", "--target", "x86_64-pc-windows-gnu"]
 
 [tasks.dev.run]
-deps = ["build"]
+deps = ["dev.build"]
 cmd = ["cargo", "run"]
 
-# [tasks.clean]
-# cmd = ["cargo clean"]
+# [tasks.build-client-install]
+# cmd = ["pnpm", "install"]
+# [tasks.build-client-build]
+# cmd = ["pnpm", "client-web:build"]
+# [tasks.build-client]
+# deps = ["build-client-install", "build-client-build"]
 
-# [tasks.dev.setup]
-# deps = ["clean"]
-# cmd = ["cargo build"]
+# [tasks.prod-build-linux]
+# cmd = ["cargo", "build", "--release", "--target", "x86_64-unknown-linux-gnu"]
+# [tasks.prod-build-windows]
+# cmd = ["cargo", "build", "--release", "--target", "x86_64-pc-windows-gnu"]
+# [tasks.prod-build]
+# deps = ["build-client", "prod-build-linux", "prod-build-windows"]
 
-# [tasks.dev.build]
-# deps = ["clean"]
-# cmd = ["cargo build"]
+# [tasks.dev-build-linux]
+# cmd = ["cargo", "build", "--target", "x86_64-unknown-linux-gnu"]
+# [tasks.dev-build-windows]
+# cmd = ["cargo", "build", "--target", "x86_64-pc-windows-gnu"]
+# [tasks.dev-build]
+# deps = ["build-client", "dev-build-linux", "dev-build-windows"]
 
-# [tasks.prod.build]
-# deps = ["clean"]
-# cmd = ["cargo build --release"]
-
-# [tasks.install]
-# deps = ["dev.build", "prod.build"]
-# cmd = ["cargo install --path ."]
+# [tasks.build]
+# deps = ["build-client", "dev-build", "prod-build"]
